--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,175 @@
+absl-py==2.1.0
+ace==0.3.3
+aiohttp==3.9.5
+aiosignal==1.3.1
+altgraph @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot11/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-141/altgraph-0.17.2-py2.py3-none-any.whl
+anyio==3.7.0
+asgiref==3.8.1
+astunparse==1.6.3
+async-timeout==4.0.3
+attrs==23.2.0
+base58==2.1.1
+beautifulsoup4==4.12.2
+bech32==1.2.0
+blis==0.7.11
+boto3==1.34.80
+botocore==1.34.80
+catalogue==2.0.10
+certifi==2023.5.7
+cffi==1.16.0
+charset-normalizer==3.1.0
+click==8.1.7
+cloudpathlib==0.18.1
+confection==0.1.5
+contourpy==1.2.1
+curated-tokenizers==0.0.9
+curated-transformers==0.1.1
+cycler==0.12.1
+cymem==2.0.8
+distro==1.9.0
+Django==4.2.13
+dnspython==2.6.1
+email_validator==2.2.0
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
+en-core-web-trf @ https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.7.3/en_core_web_trf-3.7.3-py3-none-any.whl
+et-xmlfile==1.1.0
+exceptiongroup==1.1.1
+fastapi==0.97.0
+fastapi-cli==0.0.4
+filelock==3.15.4
+flatbuffers==24.3.25
+fonttools==4.53.1
+frozenlist==1.4.1
+fsspec==2024.6.0
+future @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot11/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-141/future-0.18.2-py3-none-any.whl
+gast==0.5.4
+gensim==4.3.2
+google-pasta==0.2.0
+grpcio==1.64.1
+h11==0.14.0
+h5py==3.11.0
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.0
+huggingface-hub==0.23.4
+idna==3.4
+importlib_metadata==7.2.1
+importlib_resources==6.4.0
+iniconfig==2.0.0
+isort==5.13.2
+itsdangerous==2.2.0
+Jinja2==3.1.4
+jmespath==1.0.1
+joblib==1.4.2
+keras==3.4.0
+kiwisolver==1.4.5
+langcodes==3.4.0
+language_data==1.2.0
+libclang==18.1.1
+lxml==5.2.2
+macholib @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot11/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-141/macholib-1.15.2-py2.py3-none-any.whl
+marisa-trie==1.2.0
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.1
+mdurl==0.1.2
+ml-dtypes==0.3.2
+mock==5.1.0
+mpmath==1.3.0
+msgpack==1.0.8
+multidict==6.0.5
+murmurhash==1.0.10
+namex==0.0.8
+networkx==3.2.1
+numpy==1.26.4
+openai==0.28.0
+openpyxl==3.1.2
+opt-einsum==3.3.0
+optree==0.11.0
+orjson==3.10.5
+outcome==1.3.0.post0
+packaging==24.1
+pandas==2.2.1
+pillow==10.4.0
+pluggy==1.5.0
+preshed==3.0.9
+protobuf==4.25.3
+psycopg2-binary==2.9.9
+py-algorand-sdk==2.5.0
+pycodestyle==2.11.1
+pycparser==2.22
+pycryptodomex==3.20.0
+pydantic==1.10.9
+Pygments==2.18.0
+PyNaCl==1.5.0
+pyparsing==3.1.2
+PySocks==1.7.1
+pytest==8.3.3
 python-bitcoinrpc==1.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
-sqlalchemy==2.0.23
-psycopg2-binary==2.9.9 
+python-multipart==0.0.9
+pytz==2024.1
+PyYAML==6.0.1
+regex==2024.5.15
+requests==2.31.0
+rich==13.7.1
+s3transfer==0.10.1
+safetensors==0.4.3
+scikit-learn==1.5.0
+scipy==1.13.1
+selenium==4.23.1
+shellingham==1.5.4
+simplejson==3.19.3
+six==1.16.0
+smart-open==7.0.4
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.5
+spacy==3.7.5
+spacy-curated-transformers==0.2.2
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+spacy-universal-sentence-encoder==0.4.6
+SQLAlchemy==2.0.23
+sqlparse==0.5.0
+srsly==2.4.8
+starlette==0.27.0
+sympy==1.12.1
+tabulate==0.9.0
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow==2.16.1
+tensorflow-hub==0.16.1
+tensorflow-io-gcs-filesystem==0.37.0
+termcolor==2.4.0
+tf_keras==2.16.0
+thinc==8.2.5
+threadpoolctl==3.5.0
+tokenizers==0.19.1
+tomli==2.1.0
+torch==2.3.1
+tqdm==4.66.4
+transformers==4.41.2
+trio==0.26.0
+trio-websocket==0.11.1
+typer==0.12.3
+typing_extensions==4.12.2
+tzdata==2024.1
+ujson==5.10.0
+undetected-chromedriver==3.5.5
+urllib3==1.26.18
+uvicorn==0.30.1
+uvloop==0.19.0
+wasabi==1.1.3
+watchfiles==0.22.0
+weasel==0.4.1
+webdriver-manager==4.0.2
+websocket-client==1.8.0
+websockets==12.0
+Werkzeug==3.0.3
+wrapt==1.16.0
+wsproto==1.2.0
+yarl==1.9.4
+zipp==3.19.2
