Allow for multiple RPCs

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Bitcoin RPC Configuration
-BITCOIN_RPC_URL=https://sample-user:sample-password@sample-host:443
+BITCOIN_RPC_URLS=https://sample-user:sample-password@sample-host:443,https://sample-user:sample-password@sample-host:443
 
 # Database Configuration
 DATABASE_URL=postgresql://sample_user:sample_password@sample_host:5432/sample_database
